[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-keypool"
version = "0.2.1"
description = "Free-tier LLM API key pool with rotation, cooldown, and LangChain drop-in"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "langchain-core>=0.3.0",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
gui = [
    "textual>=0.80",
]
all = [
    "textual>=0.80",
]

[project.scripts]
llm-aggregator = "llm_aggregator.__main__:main"

[tool.setuptools.packages.find]
include = ["llm_aggregator*"]

[tool.setuptools.package-data]
"llm_aggregator" = ["config/*.json", "config/*.yaml"]
