[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-keypool"
version = "0.3.1"
description = "Free-tier LLM API key pool with rotation, cooldown, and LangChain drop-in"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "langchain-core>=0.3.0",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
gui = [
    "textual>=0.80",
]
proxy = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
all = [
    "textual>=0.80",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
llm-keypool = "llm_keypool.__main__:main"

[tool.setuptools.packages.find]
include = ["llm_keypool*"]

[tool.setuptools.package-data]
"llm_keypool" = ["config/*.json", "config/*.yaml"]
